Undo last commit.

--- a/html/about.html
+++ b/html/about.html
@@ -1,1 +1,13 @@
-<div class="card m-6"> <div class="card-content"> <div class="media"> <div class="media-content"> <p class="title is-4">About</p> </div> </div> <div class="content"> <p>A hacked together minimal and not really a JAMSTACK web app for blogging about things that interest me. </p> <a href="https://github.com/HuyNguyenAu/huynguyen">Github</a> </div> </div> </div>
+<div class="card m-6">
+    <div class="card-content">
+        <div class="media">
+            <div class="media-content">
+                <p class="title is-4">About</p>
+            </div>
+        </div>
+        <div class="content">
+            <p>A hacked together minimal and not really a JAMSTACK web app for blogging about things that interest me.
+            </p> <a href="https://github.com/HuyNguyenAu/huynguyen">Github</a>
+        </div>
+    </div>
+</div>
