--- a/html/error.html
+++ b/html/error.html
@@ -1,1 +1,13 @@
-<div class="card m-6"> <div class="card-content"> <div class="media"> <div class="media-content"> <p class="title is-4">OOPS!</p> </div> </div> <div class="content"> <p>Looks like something went wrong!</p> <p id="error">Don't worry, here's the error:</p> </div> </div> </div>
+<div class="card m-6">
+    <div class="card-content">
+        <div class="media">
+            <div class="media-content">
+                <p class="title is-4">OOPS!</p>
+            </div>
+        </div>
+        <div class="content">
+            <p>Looks like something went wrong!</p>
+            <p id="error">Don't worry, here's the error:</p>
+        </div>
+    </div>
+</div>
