--- a/html/critical.html
+++ b/html/critical.html
@@ -1,1 +1,65 @@
-<!doctype html> <html lang="en"> <head> <meta charset="utf-8"> <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"> <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css" integrity="sha256-WLKGWSIJYerRN8tbNGtXWVYnUM5wMJTXD8eG4NtGcDM=" crossorigin="anonymous"> <title>Critical Error - Huy Nguyen's Blog</title> </head> <body> <nav class="navbar" role="navigation" aria-label="main navigation"> <div class="navbar-brand"> <a class="navbar-item" href="#home"> <div class="box pt-0 is-shadowless"> <h1 class="title">(╯°□°）╯︵ ┻━┻</h1> </div> </a> <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="navbar"> <span aria-hidden="true"></span> <span aria-hidden="true"></span> <span aria-hidden="true"></span> </a> </div> <div id="navbar" class="navbar-menu"> <div class="navbar-start"> <a class="navbar-item" href="#home"> Home </a> <a class="navbar-item" href="#archives"> Archives </a> <a class="navbar-item" href="#about"> About </a> </div> </div> </nav> <div class="container has-text-centered"> <div class="card m-6"> <div class="card-content"> <div class="media"> <div class="media-content"> <p class="title is-4">Critical Error!</p> </div> </div> <div class="content"> <p>Okay, this is not good.</p> <button id="home" class="button">Go Home</button> </div> </div> </div> </div> <script> try { document.querySelector('.navbar-burger').addEventListener('click', function (e) { e.currentTarget.classList.toggle('is-active'); document.getElementById(e.currentTarget.dataset.target).classList.toggle('is-active'); }); } catch (e) { console.error(`Failed to add click event listener to navbar-burger. ${e}.`); try { document.querySelector('.navbar-burger').remove(); } catch (e) { console.error(`Failed to remove navbar-burger. ${e}.`); } } document.getElementById('home').addEventListener('click', function () { document.location.href = '../index.html'; }); </script> </body> </html>
+<!doctype html>
+<html lang="en">
+
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css"
+        integrity="sha256-WLKGWSIJYerRN8tbNGtXWVYnUM5wMJTXD8eG4NtGcDM=" crossorigin="anonymous">
+    <title>Critical Error - Huy Nguyen's Blog</title>
+</head>
+
+<body>
+    <nav class="navbar" role="navigation" aria-label="main navigation">
+        <div class="navbar-brand"> <a class="navbar-item" href="#home">
+                <div class="box pt-0 is-shadowless">
+                    <h1 class="title">(╯°□°）╯︵ ┻━┻</h1>
+                </div>
+            </a> <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false"
+                data-target="navbar"> <span aria-hidden="true"></span> <span aria-hidden="true"></span> <span
+                    aria-hidden="true"></span> </a> </div>
+        <div id="navbar" class="navbar-menu">
+            <div class="navbar-start"> <a class="navbar-item" href="#home"> Home </a> <a class="navbar-item"
+                    href="#archives"> Archives </a> <a class="navbar-item" href="#about"> About </a> </div>
+        </div>
+    </nav>
+    <div class="container has-text-centered">
+        <div class="card m-6">
+            <div class="card-content">
+                <div class="media">
+                    <div class="media-content">
+                        <p class="title is-4">Critical Error!</p>
+                    </div>
+                </div>
+                <div class="content">
+                    <p>Okay, this is not good.</p> <button id="home" class="button">Go Home</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <script>
+        try {
+            document.querySelector('.navbar-burger').addEventListener('click',
+                function (e) {
+                    e.currentTarget.classList.toggle('is-active');
+                    document.getElementById(e.currentTarget.dataset.target).classList.toggle('is-active');
+                }
+            );
+        }
+        catch (e) {
+            console.error(`Failed to add click event listener to navbar-burger. ${e}.`);
+            
+            try {
+                document.querySelector('.navbar-burger').remove();
+            } catch (e) {
+                console.error(`Failed to remove navbar-burger. ${e}.`);
+            }
+        }
+
+        document.getElementById('home').addEventListener('click', function () {
+            document.location.href = '../index.html';
+        });
+    </script>
+</body>
+
+</html>
