--- a/html/archives.html
+++ b/html/archives.html
@@ -2,7 +2,7 @@
  <p class="title">
   March 2020
  </p>
-</div><div class="card m-6 is-clickable" url="https://raw.githubusercontent.com/HuyNguyenAu/huynguyen/master/html/proident_laborum.html">
+</div><div class="card m-6 is-clickable grow" url="https://raw.githubusercontent.com/HuyNguyenAu/huynguyen/master/html/proident_laborum.html">
  <div class="card-image">
   <figure class="image is-3by1">
    <img src="https://s3.amazonaws.com/ooomf-com-files/wjNV6gWuQkqeuH8txHc9_sylwiabartyzel_unsplash_tatry_03.jpg"/>
