--- a/index.html
+++ b/index.html
@@ -1,1 +1,36 @@
-<!doctype html> <html lang="en"> <head> <meta charset="utf-8"> <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"> <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css" integrity="sha256-WLKGWSIJYerRN8tbNGtXWVYnUM5wMJTXD8eG4NtGcDM=" crossorigin="anonymous"> <link rel="stylesheet" href="css/index.css"/> <title>Huy Nguyen's Blog</title> </head> <body> <nav class="navbar" role="navigation" aria-label="main navigation"> <div class="navbar-brand"> <a class="navbar-item" href="#home"> <div class="box pt-0 is-shadowless"> <h1 class="title">._.</h1> </div> </a> <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="navbar"> <span aria-hidden="true"></span> <span aria-hidden="true"></span> <span aria-hidden="true"></span> </a> </div> <div id="navbar" class="navbar-menu"> <div class="navbar-start"> <a class="navbar-item" href="#home"> Home </a> <a class="navbar-item" href="#archives"> Archives </a> <a class="navbar-item" href="#about"> About </a> </div> <div class="navbar-end"> <a id="theme" class="navbar-item"> Dark Mode </a> </div> </div> </nav> <div id="content" class="container"> </div> <footer class="footer"> <div class="content has-text-centered"> <button id="go-to-top" class="button">Go to top</button> </div> </footer> <script src="js/index.js" defer></script> </body> </html>
+<!doctype html>
+<html lang="en">
+
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="A hacked together minimal and not really a JAMSTACK web app for blogging about things that interest me.">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css"
+        integrity="sha256-WLKGWSIJYerRN8tbNGtXWVYnUM5wMJTXD8eG4NtGcDM=" crossorigin="anonymous" preload>
+    <link rel="stylesheet" href="css/index.css" preload/>
+    <title>Huy Nguyen's Blog</title>
+</head>
+
+<body>
+    <nav class="navbar" role="navigation" aria-label="main navigation">
+        <div class="navbar-brand"> <a class="navbar-item" href="#home">
+                <div class="box pt-0 is-shadowless">
+                    <h1 class="title">._.</h1>
+                </div>
+            </a> <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false"
+                data-target="navbar"> <span aria-hidden="true"></span> <span aria-hidden="true"></span> <span
+                    aria-hidden="true"></span> </a> </div>
+        <div id="navbar" class="navbar-menu">
+            <div class="navbar-start"> <a class="navbar-item" href="#home"> Home </a> <a class="navbar-item"
+                    href="#archives"> Archives </a> <a class="navbar-item" href="#about"> About </a> </div>
+            <div class="navbar-end"> <a id="theme" class="navbar-item"> Dark Mode </a> </div>
+        </div>
+    </nav>
+    <div id="content" class="container"> </div>
+    <footer class="footer">
+        <div class="content has-text-centered"> <button id="go-to-top" class="button">Go to top</button> </div>
+    </footer>
+    <script src="js/index.js" defer></script>
+</body>
+
+</html>
