Fixed footer padding bottom too thick.

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <div class="navbar-end"> <a id="theme" class="navbar-item"> Dark Mode </a> </div>
         </div>
     </nav>
-    <div id="content" class="container"> </div>
+    <div id="content" class="container expand"> </div>
     <footer class="footer">
         <div class="content has-text-centered"> <button id="go-to-top" class="button">Go to top</button> </div>
     </footer>
