--- a/index.html
+++ b/index.html
@@ -1,41 +1,66 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description"
-        content="A hacked together minimal and not really a JAMSTACK web app for blogging about things that interest me.">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css"
-        integrity="sha256-WLKGWSIJYerRN8tbNGtXWVYnUM5wMJTXD8eG4NtGcDM=" crossorigin="anonymous" preload>
+  <head>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+    <meta
+      name="description"
+      content="A hacked together minimal and not really a JAMSTACK web app for blogging about things that interest me."
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css"
+      integrity="sha256-WLKGWSIJYerRN8tbNGtXWVYnUM5wMJTXD8eG4NtGcDM="
+      crossorigin="anonymous"
+      preload
+    />
     <link rel="stylesheet" href="css/index.css" preload />
-    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
-    <link rel="manifest" href="site.webmanifest">
+    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />
+    <link rel="manifest" href="site.webmanifest" />
     <title>Huy Nguyen's Blog</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <nav class="navbar" role="navigation" aria-label="main navigation">
-        <div class="navbar-brand"> <a class="navbar-item" href="#home">
-                <div class="box pt-0 is-shadowless">
-                    <h1 class="title">._.</h1>
-                </div>
-            </a> <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false"
-                data-target="navbar"> <span aria-hidden="true"></span> <span aria-hidden="true"></span> <span
-                    aria-hidden="true"></span> </a> </div>
-        <div id="navbar" class="navbar-menu">
-            <div class="navbar-start"> <a class="navbar-item" href="#home"> Home </a> <a class="navbar-item"
-                    href="#archives"> Archives </a> <a class="navbar-item" href="#about"> About </a> </div>
-            <div class="navbar-end"> <a id="theme" class="navbar-item"> Dark Mode </a> </div>
+      <div class="navbar-brand">
+        <a class="navbar-item" href="#home">
+          <div class="box pt-0 is-shadowless">
+            <h1 class="title">._.</h1>
+          </div>
+        </a>
+        <a
+          role="button"
+          class="navbar-burger burger"
+          aria-label="menu"
+          aria-expanded="false"
+          data-target="navbar"
+        >
+          <span aria-hidden="true"></span> <span aria-hidden="true"></span>
+          <span aria-hidden="true"></span>
+        </a>
+      </div>
+      <div id="navbar" class="navbar-menu">
+        <div class="navbar-start">
+          <a class="navbar-item" href="#home"> Home </a>
+          <a class="navbar-item" href="#archives"> Archives </a>
+          <a class="navbar-item" href="#about"> About </a>
         </div>
+        <div class="navbar-end">
+          <a id="theme" class="navbar-item"> Dark Mode </a>
+        </div>
+      </div>
     </nav>
-    <div id="content" class="container expand"> </div>
+    <div id="content" class="container expand"></div>
     <footer class="footer">
-        <div class="content has-text-centered"> <button id="go-to-top" class="button">Go to top</button> </div>
+      <div class="content has-text-centered">
+        <button id="go-to-top" class="button">Go to top</button>
+      </div>
     </footer>
     <script src="js/index.js" defer></script>
-</body>
-
+  </body>
 </html>
