--- a/html/about.html
+++ b/html/about.html
@@ -7,7 +7,7 @@
         </div>
         <div class="content">
             <p>A hacked together minimal and not really a JAMSTACK web app for blogging about things that interest me.
-            </p> <a href="https://github.com/HuyNguyenAu/huynguyen">Github</a>
+            </p> <a href="https://github.com/HuyNguyenAu/huynguyen" target="_blank" rel="noreferrer">Github</a>
         </div>
     </div>
 </div>
