--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
         <div class="navbar-start">
           <a class="navbar-item" href="#home"> Home </a>
           <a class="navbar-item" href="#archives"> Archives </a>
+          <a class="navbar-item" href="html/resume.html" target="_blank" rel="noreferrer"> Resume </a>
           <a class="navbar-item" href="#about"> About </a>
         </div>
         <div class="navbar-end">
