Updated to have better fit for print A4.

--- a/html/resume.html
+++ b/html/resume.html
@@ -25,7 +25,7 @@
   <body>
     <div class="columns is-vcentered is-centered is-full-height">
       <div class="column">
-        <div class="section py-0">
+        <div class="section">
           <div class="container">
             <!-- Name -->
             <div class="content">
@@ -148,9 +148,9 @@
           </div>
         </div>
       </div>
-      <div class="column is-three-fifth">
+      <div class="column is-three-fifths">
         <!-- Work Experience -->
-        <div class="section py-0">
+        <div class="section">
           <div class="container">
             <div class="content">
               <h1>Work Experience</h1>
@@ -176,7 +176,7 @@
           </div>
         </div>
         <!-- Passions -->
-        <div class="section pb-0">
+        <div class="section">
           <div class="container">
             <div class="content">
               <h1>Passions</h1>
@@ -211,7 +211,7 @@
           </div>
         </div>
         <!-- Education History-->
-        <div class="section pb-0">
+        <div class="section">
           <div class="container">
             <div class="content">
               <h1>Education</h1>
