--- a/html/resume.html
+++ b/html/resume.html
@@ -128,7 +128,7 @@
               </p>
             </div>
             <!-- Skills -->
-            <div class="content pt-6">
+            <div class="content py-5">
               <strong># About Me</strong>
               <p>
                 Software development is my passion. I love to tackle interesting
@@ -150,7 +150,7 @@
       </div>
       <div class="column is-three-fifths">
         <!-- Work Experience -->
-        <div class="section">
+        <div class="section py-5">
           <div class="container">
             <div class="content">
               <h1>Work Experience</h1>
@@ -176,7 +176,7 @@
           </div>
         </div>
         <!-- Passions -->
-        <div class="section">
+        <div class="section py-5">
           <div class="container">
             <div class="content">
               <h1>Passions</h1>
@@ -211,7 +211,7 @@
           </div>
         </div>
         <!-- Education History-->
-        <div class="section">
+        <div class="section py-5">
           <div class="container">
             <div class="content">
               <h1>Education</h1>
