--- a/html/archives.html
+++ b/html/archives.html
@@ -21,8 +21,10 @@
   </div>
   <div class="content">
    <p class="truncate">
-    Clone the repository:
+    In this short article, we will set up Matterport's Mask RCNN repository.
    </p>
+   This is a quick and
+            simple guide that take some points from
    <div class="is-inline-block has-text-weight-light has-background-light p-5 mb-6">
    </div>
    <div class="is-inline-block has-text-weight-light has-background-light p-5 mb-6">
