--- a/html/setting_up_matterport_mask_rcnn.html
+++ b/html/setting_up_matterport_mask_rcnn.html
@@ -1,8 +1,8 @@
 <div class="card m-3">
     <div class="card-image">
-        <figure class="image is-3by1">
+        <figure class="image">
             <img
-                src="https://s3.amazonaws.com/ooomf-com-files/wjNV6gWuQkqeuH8txHc9_sylwiabartyzel_unsplash_tatry_03.jpg">
+                src="../img/setting_up_matterport_mask_rcnn.jpg">
         </figure>
     </div>
     <div class="card-content">
