--- a/html/archives.html
+++ b/html/archives.html
@@ -4,8 +4,8 @@
  </p>
 </div><div class="card m-3 is-clickable grow" url="https://raw.githubusercontent.com/HuyNguyenAu/huynguyen/master/html/setting_up_matterport_mask_rcnn.html">
  <div class="card-image">
-  <figure class="image is-3by1">
-   <img src="https://s3.amazonaws.com/ooomf-com-files/wjNV6gWuQkqeuH8txHc9_sylwiabartyzel_unsplash_tatry_03.jpg"/>
+  <figure class="image">
+   <img src="../img/setting_up_matterport_mask_rcnn.jpg"/>
   </figure>
  </div>
  <div class="card-content">
@@ -23,14 +23,6 @@
    <p class="truncate">
     In this short article, we will set up Matterport's Mask RCNN repository.
    </p>
-   <div class="is-inline-block has-text-weight-light has-background-light p-5 mb-6">
-   </div>
-   <div class="is-inline-block has-text-weight-light has-background-light p-5 mb-6">
-   </div>
-   <div class="is-inline-block has-text-weight-light has-background-light p-5 mb-6">
-   </div>
-   <div class="is-inline-block has-text-weight-light has-background-light p-5 mb-6">
-   </div>
   </div>
  </div>
 </div>
