--- a/html/setting_up_matterport_mask_rcnn.html
+++ b/html/setting_up_matterport_mask_rcnn.html
@@ -2,7 +2,7 @@
     <div class="card-image">
         <figure class="image">
             <img
-                src="https://github.com/HuyNguyenAu/huynguyen/blob/3b4e436d24cd0e42e596dc6d04396987dae7f668/img/setting_up_matterport_mask_rcnn.jpg">
+                src="https://raw.githubusercontent.com/HuyNguyenAu/huynguyen/3b4e436d24cd0e42e596dc6d04396987dae7f668/img/setting_up_matterport_mask_rcnn.jpg">
         </figure>
     </div>
     <div class="card-content">
