--- a/html/archives.html
+++ b/html/archives.html
@@ -5,7 +5,7 @@
 </div><div class="card m-3 is-clickable grow" url="https://raw.githubusercontent.com/HuyNguyenAu/huynguyen/master/html/setting_up_matterport_mask_rcnn.html">
  <div class="card-image">
   <figure class="image">
-   <img src="../img/setting_up_matterport_mask_rcnn.jpg"/>
+   <img src="https://raw.githubusercontent.com/HuyNguyenAu/huynguyen/3b4e436d24cd0e42e596dc6d04396987dae7f668/img/setting_up_matterport_mask_rcnn.jpg"/>
   </figure>
  </div>
  <div class="card-content">
