--- a/html/resume.html
+++ b/html/resume.html
@@ -93,28 +93,23 @@
           <div class="content">
             <h1>Work Experience</h1>
           </div>
-          <div class="columns">
-            <div class="column">
-              <div class="content">
-                <strong># IT Specialist</strong>
-                <p>EnergyLocals | 2019 to present</p>
-                <ul>
-                  <li>Created and maintaining a full-stack website.</li>
-                  <li>
-                    Developed processes, tools, and scripts for automation and
-                    backup.
-                  </li>
-                  <li>
-                    Written large SQL queries to provide reports and aid in
-                    working with large complex databases.
-                  </li>
-                  <li>
-                    Created and maintained VPSes that host and run services.
-                  </li>
-                </ul>
-              </div>
-            </div>
-            <div class="column"></div>
+          <div class="content">
+            <strong># IT Specialist</strong>
+            <p>EnergyLocals | 2019 to present</p>
+            <ul>
+              <li>Created and maintaining a full-stack website.</li>
+              <li>
+                Developed processes, tools, and scripts for automation and
+                backup.
+              </li>
+              <li>
+                Written large SQL queries to provide reports and aid in
+                working with large complex databases.
+              </li>
+              <li>
+                Created and maintained VPSes that host and run services.
+              </li>
+            </ul>
           </div>
         </div>
       </div>
@@ -141,7 +136,7 @@
               </div>
               <div class="content">
                 <strong># NAND2Tetris</strong>
-                <p>Coursea</p>
+                <p>Coursera</p>
                 <ul>
                   <li>
                     Learn to create a virtual computer from the ground up. This
